# AndroidLinkAudio

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jbloit/androidlinkaudio/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  SineGenerator.cpp  SineGenerator.h  native-lib.cpp
app/src/main/java/com/jbloit/androidlinkaudio/: AudioEngine.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jbloit/androidlinkaudio/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
